--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,14 @@ ext {
     set('snippetsDir', file("build/generated-snippets"))
 }
 
+compileJava {
+    options.compilerArgs = [
+            '-Amapstruct.defaultComponentModel=spring',
+    ]
+}
+
 dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-data-rest'
     implementation 'org.springframework.boot:spring-boot-starter-mail'
     implementation 'org.springframework.boot:spring-boot-starter-security'
@@ -34,14 +41,39 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
+
+    /* querydsl */
+    implementation 'com.querydsl:querydsl-jpa::jakarta'
+
+    /* mapstruct */
+    implementation 'org.mapstruct:mapstruct:1.5.5.Final'
+
+    /* jwt */
+    implementation 'com.auth0:java-jwt:4.4.0'
+
+    /* gson */
+    implementation 'com.google.code.gson:gson'
+
+    /* utils */
+    implementation 'org.apache.commons:commons-lang3'
+
+    /* firebase */
+    implementation 'com.google.guava:guava:33.1.0-jre'
+    implementation 'com.google.firebase:firebase-admin:9.2.0'
+
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'com.mysql:mysql-connector-j'
+
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     annotationProcessor 'org.projectlombok:lombok'
+    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
+    annotationProcessor 'jakarta.persistence:jakarta.persistence-api:3.1.0'
+    annotationProcessor 'com.querydsl:querydsl-apt::jakarta'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
     testImplementation 'org.springframework.security:spring-security-test'
+    testAnnotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
 }
 
 tasks.named('test') {
@@ -52,4 +84,8 @@ tasks.named('test') {
 tasks.named('asciidoctor') {
     inputs.dir snippetsDir
     dependsOn test
+}
+
+tasks.withType(JavaCompile).configureEach {
+    options.compilerArgs.add("-parameters")
 }
