--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,10 @@ configurations {
     }
 }
 
+configurations.configureEach {
+    exclude module: 'spring-boot-starter-logging'
+}
+
 repositories {
     mavenCentral()
 }
@@ -35,6 +39,7 @@ compileJava {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-data-rest'
+    implementation 'org.springframework.boot:spring-boot-starter-log4j2'
     implementation 'org.springframework.boot:spring-boot-starter-mail'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
@@ -64,6 +69,7 @@ dependencies {
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'com.mysql:mysql-connector-j'
+    runtimeOnly 'org.apache.logging.log4j:log4j-spring-boot:2.23.1'
 
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     annotationProcessor 'org.projectlombok:lombok'
