--- a/build.gradle
+++ b/build.gradle
@@ -49,10 +49,9 @@ dependencies {
     implementation 'org.mapstruct:mapstruct:1.5.5.Final'
 
     /* jwt */
-    implementation 'com.auth0:java-jwt:4.4.0'
-
-    /* gson */
-    implementation 'com.google.code.gson:gson'
+    implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5'
 
     /* utils */
     implementation 'org.apache.commons:commons-lang3'
